test/src/e2e_vm_tests/test_programs/should_fail/repeated_const_two_libs/src/lib1.sw
library lib1;

pub const X = 5;
